[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
acpi_tables = { git = "https://github.com/rust-vmm/acpi_tables", branch = "main"  }
anyhow = "1.0.79"
arch = { path = "../arch" }
bitflags = "2.4.1"
byteorder = "1.4.3"
epoll = "4.3.3"
event_monitor = { path = "../event_monitor" }
hypervisor = { path = "../hypervisor" }
libc = "0.2.147"
log = "0.4.20"
num_enum = "0.7.0"
pci = { path = "../pci" }
seccompiler = "0.4.0"
thiserror = "1.0.52"
tpm = { path = "../tpm" }
versionize = "0.2.0"
versionize_derive = "0.1.6"
virtio-queue = "0.11.0"
virtio-devices = { path = "../virtio-devices" }
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vm-migration = { path = "../vm-migration" }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = "0.12.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
arch = { path = "../arch" }

[features]
default = []
